deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: go-api
  name: go-api
  namespace: go-api-ns
spec:
  ports:
  - name: go-api-port
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: go-api
  type: ClusterIP
