deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-api
  namespace: go-api-ns
spec:
  ingressClassName: default
  rules:
  - host: go-api.dummy-domain.com
    http:
      paths:
      - backend:
          service:
            name: go-api
            port:
              number: 8080
        path: /path
        pathType: Prefix
